tests/fail/semantic/extern_duplicate_parameter.cyt
extern emit_coordinate(x: int, x: int)

// args: --no-colour

// expected stderr:
// error: duplicate parameter `x` on extern function `emit_coordinate`
//   ┌─ ../tests/fail/semantic/extern_duplicate_parameter.cyt:1:32
//   │
// 1 │ extern emit_coordinate(x: int, x: int)
//   │                        -       ^ duplicate parameter name
//   │                        │        
//   │                        parameter with the same name declared here before